--- a/src/app/sega/ongeki/ongeki-rating/ongeki-rating.component.css
+++ b/src/app/sega/ongeki/ongeki-rating/ongeki-rating.component.css
@@ -4,7 +4,6 @@
 
 .battle-point-table {
   width: 100%;
-  font-size: 16px;
   text-align: center;
 }
 
@@ -27,18 +26,11 @@
   max-width: 130px;
 }
 
-.left {
+.music-title {
   text-align: left;
 }
 
-tr * {
-  padding: 10px 0;
-}
-
 @media only screen and (max-width: 599px) {
-  .battle-point-table table {
-    font-size: 12px;
-  }
 
   .battle-point-table img {
     width: 18px;
